--- a/frontend/src/app/exames/components/cadastrar-material/cadastrar-material.component.html
+++ b/frontend/src/app/exames/components/cadastrar-material/cadastrar-material.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="switchFields">
             <span class="switchDiv" pTooltip="Selecione se o material cadastrado é coletável">
-                coletável:
+                Coletável:
                 <div class="radioDisplay">
                     <p-radioButton value=true formControlName="coletavel"></p-radioButton>
                     <label class="radionStyle">Sim</label>
