--- a/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
+++ b/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
@@ -5,24 +5,37 @@
             <div class="p-grid">
                 <div class="p-md-1 p-fluid">
                     Prontuário
-                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                        <input type="text" pInputText class="p-inputtext" pTooltip="Digite o prontuário do paciente." />
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px">
+                        <input
+                            type="text"
+                            pInputText
+                            class="p-inputtext"
+                            pTooltip="Digite o prontuário do paciente."
+                        />
                         <label>Lorem ipsum</label>
                     </span>
                 </div>
                 <div class="p-md-1 p-fluid">
                     Consulta
-                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                        <input type="text" pInputText class="p-inputtext" pTooltip="Digite o número da consulta." />
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px">
+                        <input
+                            type="text"
+                            pInputText
+                            class="p-inputtext"
+                            pTooltip="Digite o número da consulta."
+                        />
                         <label>Lorem ipsum</label>
                     </span>
                 </div>
                 <div class="p-md-3 p-fluid">
                     Nome
-                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                        <input type="text" pInputText class="p-inputtext"
-
-                            pTooltip="Digite o nome do paciente." />
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px">
+                        <input
+                            type="text"
+                            pInputText
+                            class="p-inputtext"
+                            pTooltip="Digite o nome do paciente."
+                        />
 
                         <label>Lorem ipsum</label>
                     </span>
@@ -30,68 +43,84 @@
 
                 <div class="p-md-2 p-fluid" pTooltip="Selecione a origem do atendimento.">
                     Origem
-                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-
-
-                        <p-dropdown label="Pedido para 1° exame ou comparativo" 
-                        [options]="origens"
-
-                        [optionLabel]="'nome'"
-                        [optionValue]="'id'">
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px">
+                        <p-dropdown
+                            label="Pedido para 1° exame ou comparativo"
+                            [options]="origens"
+                            [optionLabel]="'nome'"
+                            [optionValue]="'id'"
+                        >
                         </p-dropdown>
                     </span>
                 </div>
                 <div class="p-md-1 p-fluid">
                     Leito
-                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                        <input type="text" pInputText class="p-inputtext" pTooltip="Digite o leito." />
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px">
+                        <input
+                            type="text"
+                            pInputText
+                            class="p-inputtext"
+                            pTooltip="Digite o leito."
+                        />
                         <label>Lorem ipsum</label>
                     </span>
                 </div>
                 <div class="p-md-1 p-fluid">
                     Quarto
-                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                        <input type="text" pInputText class="p-inputtext" pTooltip="Digite o número do quarto." />
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px">
+                        <input
+                            type="text"
+                            pInputText
+                            class="p-inputtext"
+                            pTooltip="Digite o número do quarto."
+                        />
                         <label>Lorem ipsum</label>
                     </span>
                 </div>
 
                 <div class="p-md-2 p-fluid">
                     Unidade Funcional
-                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-
-                        <p-dropdown [options]="unidades"
-                        [optionLabel]="'nome'"
-                        [optionValue]="'id'"
-                        [filter]="true"
-                        [resetFilterOnHide]="true"
-                        [showClear]="true"
-                        pTooltip="Selecione a unidade de internação.">
-
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px">
+                        <p-dropdown
+                            [options]="unidades"
+                            [optionLabel]="'nome'"
+                            [optionValue]="'id'"
+                            [filter]="true"
+                            [resetFilterOnHide]="true"
+                            [showClear]="true"
+                            pTooltip="Selecione a unidade de internação."
+                        >
                         </p-dropdown>
                     </span>
                 </div>
 
                 <div class="p-col-12 p-grid p-d-flex p-jc-center">
                     <div class="p-md-4">
-                        <button pButton type="button" label="Pesquisar" icon="pi pi-search"
-
+                        <button
+                            pButton
+                            type="button"
+                            label="Pesquisar"
+                            icon="pi pi-search"
                             (click)="datatable.refresh()"
-
-                            bTooltip="Pesquisar paciente por nome."></button>
+                            bTooltip="Pesquisar paciente por nome."
+                        ></button>
                     </div>
                     <div class="p-md-4">
                         <button pButton type="button" label="Limpar" icon="pi pi-times"></button>
                     </div>
-
                 </div>
             </div>
         </div>
 
         <div class="card card-w-title">
             <div class="p-md-12">
-                <basis-datatable [verticalButtons]="false" #datatable
-                    type="memory" [value]="" sortField="brand">
+                <basis-datatable
+                    [verticalButtons]="false"
+                    #datatable
+                    type="memory"
+                    [value]=""
+                    sortField="brand"
+                >
                     <p-column field="" header="Ação"></p-column>
                     <p-column field="" header="Prontuário"></p-column>
                     <p-column field="" header="Nome"></p-column>
@@ -103,6 +132,5 @@
                 </basis-datatable>
             </div>
         </div>
-
     </div>
 </div>
