--- a/frontend/src/app/exames/components/formulario-sala/formulario-sala.component.html
+++ b/frontend/src/app/exames/components/formulario-sala/formulario-sala.component.html
@@ -7,34 +7,61 @@
                     <div class="p-md-4 p-col-12">
                         <label for="name">Indentificação da Sala</label>
                         <span class="md-inputfield p-float-label">
-                            <input type="text" pInputText class="p-inputtext" 
-                            [(ngModel)]="nome"/>
+                            <input type="text" pInputText class="p-inputtext" [(ngModel)]="nome" />
                         </span>
                     </div>
-                    <app-unidade-funcional class="p-md-4" #unidadeFuncional></app-unidade-funcional>
-                </div>
-                <div class="p-col-12 p-grid">
-                    <div class="p-md-5 p-col-12">
+                    <div class="p-md-4 p-col-12">
                         <label for="name">Localização da Sala</label>
                         <span class="md-inputfield p-float-label">
-                            <input type="text" pInputText class="p-inputtext" 
-                            [(ngModel)]="locacao"/>
+                            <input
+                                type="text"
+                                pInputText
+                                class="p-inputtext"
+                                [(ngModel)]="locacao"
+                            />
                         </span>
                     </div>
-                    <div class="p-md-5 p-col-12">
+                </div>
+                <div class="p-col-12 p-grid">
+                    <app-unidade-funcional class="p-md-4" #unidadeFuncional></app-unidade-funcional>
+                    <div class="p-md-4 p-col-12">
                         <label>Ativo:</label>
                         <div class="ativo">
-                            <p-radioButton class="sim" [(ngModel)]="ativo" name="situacao" value=true label="Sim"></p-radioButton>
-                            <p-radioButton [(ngModel)]="ativo" name="situacao" value=false label="Não"></p-radioButton>
+                            <p-radioButton
+                                class="sim"
+                                [(ngModel)]="ativo"
+                                name="situacao"
+                                value="true"
+                                label="Sim"
+                            ></p-radioButton>
+                            <p-radioButton
+                                [(ngModel)]="ativo"
+                                name="situacao"
+                                value="false"
+                                label="Não"
+                            ></p-radioButton>
                         </div>
                     </div>
                 </div>
                 <div class="p-col-12 p-grid">
                     <div class="p-md-2 p-sm-5">
-                        <button pButton type="button" label="Salvar" icon="pi pi-save" [disabled]="!validarFormulario()" (click)="cadastrar()"></button>
+                        <button
+                            pButton
+                            type="button"
+                            label="Salvar"
+                            icon="pi pi-save"
+                            [disabled]="!validarFormulario()"
+                            (click)="cadastrar()"
+                        ></button>
                     </div>
                     <div class="p-md-2 p-sm-5">
-                        <button pButton type="button" label="Limpar" icon="pi pi-times" (click)="limparFormulario()"></button>
+                        <button
+                            pButton
+                            type="button"
+                            label="Limpar"
+                            icon="pi pi-times"
+                            (click)="limparFormulario()"
+                        ></button>
                     </div>
                 </div>
             </div>
